# multimedia-lib

./: CMakeLists.txt  LICENSE  README.md  REFERENCES.md  build-windows.cmd  library.cmake  update.sh
demo/: CMakeLists.txt
demo/available_audio_devices/: CMakeLists.txt  main.cpp
include/pfs/multimedia/: audio.hpp  error.hpp  exports.hpp
scripts/: build.cxx11.cmd  build.cxx11.qt5.cmd  build.cxx11.qt5.sh  build.cxx11.sh
src/: device_info_pulseaudio.cpp  device_info_qt5.cpp  device_info_win32.cpp
