################################################################################
# Copyright (c) 2021,2022 Vladislav Trifochkin
#
# This file is part of `multimedia-lib`.
#
# Changelog:
#      2021.08.03 Initial version.
################################################################################
add_subdirectory(available_audio_devices)
